<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="assistant_enabled"
        android:summary="@string/pref_assistant_description"
        android:title="@string/pref_assistant_enable" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="Yasha"
        android:inputType="textCapWords"
        android:key="assistant_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="assistant_jokes"
        android:summary="@string/pref_assistant_jokes_description"
        android:title="@string/pref_assistant_jokes_title" />

</PreferenceScreen>
